contrib/cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/namespace234573.h

#ifndef NAMESPACE_H
#define NAMESPACE_H

namespace named2_234573_included {

  void help_named2_234573_included() {

  }
  
  static int static_help_named2_234573_included() {
    
  }

  static inline void static_inline_help_named2_234573_included() {

  }
}

#endif 
